--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ https://example.com/page.html
       <h3>Privacy Preserving Credential Presentations</h3>
       <p>
         Using DIDs, authentication keys and authenticated encryption, 
-        a party can privatly and securely present credentials over a message
+        a party can privately and securely present credentials over a message
         oriented transport agnositc communication channel, such as <a href="https://github.com/decentralized-identity/didcomm-messaging">DIDComm</a>.
         See <a href="https://github.com/hyperledger/aries-rfcs/blob/master/features/0037-present-proof/README.md">
           HyperLedger Aries Present Proof Protocol
@@ -611,7 +611,7 @@ https://example.com/page.html
       <h3>Negotiating and Finalizing Payment</h3>
       <p>
         Using DIDs, assertion method keys and authenticated encryption, 
-        a party can privatly and securely negotiate and finalize payment over a message
+        a party can privately and securely negotiate and finalize payment over a message
         oriented transport agnositc communication channel, such as <a href="https://github.com/decentralized-identity/didcomm-messaging">DIDComm</a>.
         See <a href="https://github.com/hyperledger/aries-rfcs/blob/master/features/0075-payment-decorators/README.md">
         HyperLedger Aries Payment Decorators.
@@ -1557,11 +1557,8 @@ using <a href="https://github.com/WebOfTrustInfo/rwot6-santabarbara/blob/master/
         <p>This use case describes the most common authentication action for people on the Internet.
         </p>
       </section>
-<<<<<<< HEAD
 
-=======
->>>>>>> 5f62c820bcb52dffcebc67e749a3e31153185e35
-	  <p class="reqList"><span class="reqListbefore">Requirements:</span>
+<p class="reqList"><span class="reqListbefore">Requirements:</span>
 <span data-reqid="authenticate"></span>,
 <span data-reqid="decentralized"></span>,
 <span data-reqid="unique"></span>,
