Corrected didUpdate svg

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@ https://example.com/page.html
 	      </section><!-- Read -->
 	      <section id="actionUpdate"><h2>Update</h2>
 <figure id="didUpdate" class="actionSVG">
-  <img src="images/didupdate.svg" alt="Diagram shows controller on the left with an arraow labeled 'Modify' leading to three boxes labeled 'Service endpoints', 'Forward/Migrate' and 'Recovery material'. A separate arrow labeled 'Rotate or revoke' points to 'Public proof material.'" />
+  <img src="images/didUpdate.svg" alt="Diagram shows controller on the left with an arraow labeled 'Modify' leading to three boxes labeled 'Service endpoints', 'Forward/Migrate' and 'Recovery material'. A separate arrow labeled 'Rotate or revoke' points to 'Public proof material.'" />
 <figcaption>Controllers have many options to ensure the continued usefulness of a DID</figcaption>
 </figure>
 
