Human story for online shopper. Fixes Issue #105
I edited the wording suggested to include mention of importance of recognized globally unique ID that was in the original but lost in the rewording. Fixes Issue #105

--- a/index.html
+++ b/index.html
@@ -300,7 +300,20 @@ https://example.com/page.html
         <h2>Use Cases</h2>
         <section id="onlineShopper">
           <h3>Online shopper</h3>
-        <p>Traditionally, a shopper frequents a trusted retailer and can physically hold the products they wish to purchase.
+        <p>Merry has been seeking a special edition, collectible card ever since her best friend, Eli, opined about 
+		losing the one his Dad had given him as a reward for getting straight "A"s at school. She found it 
+		on an online marketplace, for sale by DeepVintage in another country, over 2000 miles away. Although the 
+		marketplace promises refunds, Merry is also worried that Eli's heart would be broken if she accidentally got him a fake.</p>
+	<p>Fortunately, DeepVintage makes use of globally-recognized identifiers for everything in its marketplace so that Merry 
+		can be sure she's searching the the right collectible. Furthermore, DeepVintage is 
+		able to provide identity documentation in the form of signed statements of title transfer from each of the owners,
+		all the way back to the original, which includes a statement of authenticity from the original manufacturer. Each of 
+		the signed statements can be independently verified because they were signed using public DIDs for the buyer and seller. 
+		The collected signatures comprise a complete chain of custody along with some interesting anecdotes about each sale. 
+		Merry was able to verify the provenance of the card and delighted Eli with a surprise gift of a perfect replacement for his lost memento.</p>
+		
+		<!--		
+		<p>Traditionally, a shopper frequents a trusted retailer and can physically hold the products they wish to purchase.
 		The product and the information about it is trusted because it is put there by the brand, and the shopper trusts that
 		the retailer has received the product through trusted supply chain partners. Today, there is a multitude of
 		channels and platforms for selling and buying products. The internet has changed consumer purchasing behavior
@@ -317,8 +330,8 @@ https://example.com/page.html
 	<ol>
           <li>validation of the legitimacy of an online listing &mdash; in particular on third party marketplaces;</li>
           <li>assurance of identification uniqueness and key identifying data element accuracy.</li>
-        </ol>
-		<!-- The text to display in te following paragraph is generated based on the data-reqID attributes -->
+        </ol>-->
+		<!-- The text to display in the following paragraph is generated based on the data-reqID attributes -->
 		<p class="reqList"><span class="reqListbefore">Requirements:</span>
 
 <span data-reqid="authenticate"></span>,
@@ -331,7 +344,7 @@ https://example.com/page.html
 <span data-reqid="survivesRel"></span>
 
 </p>
-	<p class="shortUcContributor">Contributed by GS1</p>
+	<p class="shortUcContributor">Contributed by GS1 and Legendary Requirements</p>
         </section><!-- Online shopper-->
 
 	<section id="vehicleAssemblies"><h3>Vehicle assemblies</h3>
