Human story for vehicle assembly. Will fix issue #106

--- a/index.html
+++ b/index.html
@@ -335,6 +335,22 @@ https://example.com/page.html
         </section><!-- Online shopper-->
 
 	<section id="vehicleAssemblies"><h3>Vehicle assemblies</h3>
+		<p>When Bertha bought her new car, it came with its own DID, not just as an alternative 
+			<abbr title="Vehicle Identification Number">VIN</abbr>, but with unique DIDs for every replaceable 
+			component in the vehicle and a secure data storage for keeping track of vehicle use and maintenance. 
+			Even before she purchased it, she was able to verify that, as advertised, every part in the car is 
+			100% made with carbon-neutral processes as certified by various independent agencies.</p>
+		<p>As the controller of the car's DID, she had automatic control over all of its components' DIDs. During 
+			maintenance, she would choose mechanics that automatically provided digital records of their work, 
+			stored at her direction in the car's data store. When a part needed to be replaced, she'd make sure 
+			the new component's DID is recorded and the old one retired. Similarly, her car automatically tracked 
+			fuel purchases and saved telemetry reports to storage, where it was kept securely under her control.</p>
+		<p>She found an insurance company that was able to automatically offer her a discount after passing a certification 
+			of good maintenance and good driving. When she later put her car up for sale, she was able to prove her 
+			track record of maintenance. Upon sale, she transferred control over the car's DID and its secure storage, 
+			giving the new owner a working, and contiguous record of the vehicle.</p>
+		
+<!--		
 	<p>Manufactured goods are usually the output of multiple processes carried out by multiple actors. Think of a vehicle
 	(be it a ship, a train, a car or a plane) with
 	components and assemblies of components from multiple suppliers that are then added to the emerging vehicle as it makes its
@@ -354,7 +370,7 @@ https://example.com/page.html
 	<p>The vehicle itself has its own identifier too. This would allow that particular vehicle to be a reference for the components
 	and any licensing, insurance, servicing etc. Again, the decentralized nature of DIDs promises <em>subsequent owners</em> control
 	over the identifier without dependency on any central agency allowing the maintenance record(s) to transition smoothly throughout
-	the entire lifecycle of the vehicle.</p>
+	the entire lifecycle of the vehicle.</p>-->
 	<p class="reqList"><span class="reqListbefore">Requirements:</span>
 
 <span data-reqid="authenticate"></span>,
