Human story for VCs ecosystem. Will fix #109

--- a/index.html
+++ b/index.html
@@ -407,7 +407,22 @@ https://example.com/page.html
 	</section><!-- service endpoints-->
 
 	<section id="vcEcosystem"><h3>Identifiers in an ecosystem of verifiable credentials (VCs)</h3>
-	<p>Remembering the <a href="#abstract">4 essential characteristics of a decentralized identifier</a>, there are situations
+		<p>Dixon's employer uses DIDs and <abbr title="Verifiable Credentials">VC</abbr>s to track workplace successes and recognition. 
+			Every employee has a DID registered with the company and accessible via the company registry. When he 
+			completes a training program &mdash; like CPR or Export Compliance &mdash; or receives an accolade like employee of 
+			the month, the company mints a new Verifiable Credential. These are not only used by <abbr title="Human resources">HR</abbr> 
+			in their evaluations for raises and bonuses, they are all made available to Dixon in a form he can use outside 
+			the firm. He maintains a career portfolio on his own server which he uses to keep track of his career.</p>
+		<p>When a devastating Earthquake nearly destroyed half of his small town, Dixon was able to present a selection 
+			of his workplace credentials to the office of the Incident Commander, establishing his expertise in disaster 
+			response. He used the proof material associated with the DID to prove that he was the recipient of those 
+			credentials. He was immediately put to work helping people recover from the disaster.</p>
+		<p>Over the years, following corporate policy, he updates his cryptographic material for his workplace DID. After 
+			these updates, all of the credentials could still be verified as having been issued to Dixon.</p>
+		
+<!--
+		
+		<p>Remembering the <a href="#abstract">4 essential characteristics of a decentralized identifier</a>, there are situations
 		where DIDs offer tangible benefits over existing identifier schemes. For example:</p><ul>
 	<li>Verifiable credential issuers publishing the list of subject attributes that they are authoritative for (their
 		authoritative nature can be proven).</li>
@@ -418,14 +433,14 @@ https://example.com/page.html
 	<li>The controller of a decentralized identifier can rotate (update) their cryptographic keys, either to overcome their existing keys 
 		being compromised or the development of superior technology. This does not affect the validity or provability of any 
 		verifiable credentials associated with that identifier.</li>
-	</ul>
+	</ul>-->
 	<p class="reqList"><span class="reqListbefore">Requirements:</span>
     <span data-reqid="authenticate"></span>,
     <span data-reqid="unique"></span>,
 		<span data-reqid="associatedCrypto"></span>,
 		<span data-reqid="keyRotation"></span>,
     <span data-reqid="cryptoFuture"></span></p>
-	<p class="shortUcContributor">Contributed by David Chadwick, University of Kent</p>
+	<p class="shortUcContributor">Contributed by David Chadwick, University of Kent, Legendary Requirements</p>
 	</section><!-- VC ecosystem-->
 
 	<section id="crossPlatform">
