Human story for UC 5. Will fix Issue #110

--- a/index.html
+++ b/index.html
@@ -430,7 +430,33 @@ https://example.com/page.html
 
 	<section id="crossPlatform">
           <h3>Sharing opted-in information across platforms</h3>
-	<p>Individuals are concerned that their online activity is tracked and analysed by many websites and third party services
+		<p>Franklyn is frustrated by the seemingly endless surveillance that tracks his activity online. He is a 
+			single father of two girls whose privacy is absolutely vital to him. He does what he can to minimize 
+			the ways in which he might accidentally put his kids at risk, avoiding sharing details of his life, 
+			his shopping, or the inadvertent geo-located digital photo. He has minimized her digital footprint and 
+			opted out of everything but the most secure and privacy respecting sites.</p>
+		<p>However, when he can verify that a website is meeting his own standards for privacy and is willing to accept 
+			a fiduciary obligation to protect her and her information, he appreciates the personalized services 
+			that can be created by sharing select nuggets of information while remaining as anonymous as possible.</p>
+		<p>For each service, he creates a new unique DID and authorizes the company to use it to track him, as long as they 
+			have agreed to his specific terms of service, which covers inappropriate use of his data, whether internally 
+			or in redistributing it to other companies. With this unique identifier, the services are able to build 
+			up a history of interactions with Franklyn, without recourse to his legal identity, IP address, any 
+			credit or income data, nothing. Just the DID. By authenticating using the DID the service has an exceptionally 
+			strong assurance that the current session is Franklyn. Should the store data become compromised in a data breach, 
+			all the attackers will get is a history of shopping and shopping lists associated with an arbitrary DID 
+			controlled by an unknown party.</p>
+		<p>As he becomes comfortable with a given service, he gradually shares more details, such as his pending shopping requirements. 
+			This virtual shopping list is broken into categories and different parts are shared with different retailers depending 
+			on their specialty. The stores are able to notify Franklyn of any special offers, which he is free to ignore or 
+			take advantage of.</p>
+		<p>Thanks to a promotional banner at a particular retailer's website, Franklyn learned he could get an extra discount on 
+			clothing because he is a military veteran. He gives that retailer a digital credential attesting to his status and 
+			links it to the DID they already have, securing the military discount for the rest of his relationship with them.</p>
+		<p>At any given time, he can cancel access to his data storage or simply revoke the DID entirely and either terminate the 
+			relationship or start over with a new DID.</p>
+	
+<!--	<p>Individuals are concerned that their online activity is tracked and analysed by many websites and third party services
 	without their full knowledge. Consent for the storing of cookies is routinely given without any real care being taken,
 	and service terms and conditions rarely read before being agreed to. A solution to this problem might have the following
 	characteristics:</p><ol>
@@ -443,7 +469,7 @@ https://example.com/page.html
 	<p>Such an identifier could be shared across multiple platforms that would be able to use it to provide a more customized 
 	service, but without gaining any PII and therefore without being able to correlate with other services that did depend the 
 	individual’s identity, such as their health records. A single individual would be well able to maintain multiple online 
-	personas in this way and thereby have good control over what they did and didn't share with different services.</p>
+	personas in this way and thereby have good control over what they did and didn't share with different services.</p>-->
 	<p class="reqList"><span class="reqListbefore">Requirements:</span>
     <span data-reqid="decentralized"></span>,
 		<span data-reqid="privacyPreserving"></span>,
