--- a/index.html
+++ b/index.html
@@ -453,7 +453,14 @@ https://example.com/page.html
 		<p>Thanks to a promotional banner at a particular retailer's website, Franklyn learned he could get an extra discount on 
 			clothing because he is a military veteran. He gives that retailer a digital credential attesting to his status and 
 			links it to the DID they already have, securing the military discount for the rest of his relationship with them.</p>
-		<p>At any given time, he can cancel access to his data storage or simply revoke the DID entirely and either terminate the 
+		<p>Both Franklyn and the merchant realize that, over time, the merchant will have an increasingly accurate profile of 
+		Franklyn's interests and this might prompt him to begin using a new DID, unlinked to the previous one. Recognizing this 
+			as a negative in some of their customers' opinions, the merchant offers Franklyn the option of revoking his current DID. 
+			Doing so would mean that access to, and use of, the information associated with the DID would be restricted to
+			legal record-keeping mandates clearly described in the merchant's privacy policy.</p>
+			
+			
+			At any given time, he can cancel access to his data storage or simply revoke the DID entirely and either terminate the 
 			relationship or start over with a new DID.</p>
 	
 <!--	<p>Individuals are concerned that their online activity is tracked and analysed by many websites and third party services
