Removing 'without having to change a thing'

--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@ https://example.com/page.html
 		ingredients, and certifications. All of this information is stored in the cloud, yet encrypted at the source 
 		so that not even the cloud storage provider can see what Maria is buying for her customers and each customer 
 		only has access to information related to their own shopping list. When she changes cloud providers, Maria 
-		is able to easily and simply migrate all of the data, encrypted, without exposing any data and without any 
-		of her customers needing to change a thing. The system just continued to work with the new data store.</p>
+		is able to easily and simply migrate all of the data, encrypted and without exposing any data, while the system 
+		just continues to work with the new data store.</p>
 <!--		
 		<p>Data stored in the cloud is typically visible to the cloud platform operator, even when flagged as being ‘only accessible to
 	you.’ For data to be stored in the cloud – in other words, on someone else’s computer – and for it to be only accessible to the data
