Adds "(credentials)" to title

--- a/index.html
+++ b/index.html
@@ -1684,7 +1684,7 @@ using <a href="https://github.com/WebOfTrustInfo/rwot6-santabarbara/blob/master/
     </section> <!-- end sso -->
 	    
 	    <section id="aliceRents">
-<h3>Alice Rents a Car</h3>
+<h3>Alice Rents a Car (credentials)</h3>
 <section id="aliceRentsBackground">
 <h4>Background</h4>
 <p>It’s 2021 and <abbr title="Self-Sovereign Identity">SSI</abbr> is the golden child. Alice looks forward to never having to use a password or fill out a form again. Alice’s service providers are looking to adopt zero-trust architecture with <abbr title="Year 2000 bug">Y2K</abbr> zeal. Neither of them really know what SSI or zero-trust means, but they want it.</p>
